# service-binding

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  rust.yml
src/: endpoint.rs  lib.rs  service.rs
