[package]
name = "service-binding"
version = "2.0.0"
edition = "2021"
authors = ["Wiktor Kwapisiewicz <wiktor@metacode.biz>"]
description = "Automates parsing and binding to TCP, Unix sockets and Windows Named Pipes"
repository = "https://github.com/wiktor-k/service-binding"
license = "MIT OR Apache-2.0"
keywords = ["sockets", "systemd", "listenfd", "unix", "binding"]
categories = ["parsing"]
exclude = [".github"]

[dev-dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
